chore: Add symfony/validator

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/phpunit-bridge": "^7.0",
         "symfony/runtime": "6.4.*",
+        "symfony/validator": "6.4.*",
         "symfony/yaml": "6.4.*"
     },
     "config": {
