--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/http-client": "^6.4",
         "symfony/phpunit-bridge": "^7.0",
         "symfony/runtime": "6.4.*",
         "symfony/serializer": "6.4.*",
