feat: Implement PaginateQuestions endpoint and integrate with StackExchange

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/Api/
+        namespace: App\Api
     type: attribute
