--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ APP_ENV=dev
 APP_SECRET=a10704467ebb66e991921cfb8709f4d1
 ###< symfony/framework-bundle ###
 STACK_EXCHANGE_URL=
+STACK_EXCHANGE_KEY=
