chore: Add STACK_EXCHANGE_URL env parameter and translate the readme file

--- a/.env
+++ b/.env
@@ -18,5 +18,5 @@
 APP_ENV=dev
 APP_SECRET=a10704467ebb66e991921cfb8709f4d1
 ###< symfony/framework-bundle ###
-STACK_EXCHANGE_URL=
+STACK_EXCHANGE_URL=https://api.stackexchange.com/2.3
 STACK_EXCHANGE_KEY=
